Typo in title tag  -- fixed

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Dibyendu Nath | GitHub Homepage</tile>
+	<title>Dibyendu Nath | GitHub Homepage</title>
 </head>
 <body>
 	Dibyendu Nath
