--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 			 More info: h5bp.com/b/378 -->
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-	<title>Gumby - A Flexible, Responsive CSS Framework - Powered by SASS</title>
+	<title>Dibyendu Nath | Dev - Personal Website</title>
 	<meta name="description" content="">
-	<meta name="keywords" content="">
+	<meta name="keywords" content="dev,dibyendu,nath,dnath,devnath,racelab,stochss,ucsb,appfolio,mcafee,eeff,encryption,cloud computing,santa barbara">
 	<meta name="author" content="humans.txt">
 
 	<link rel="shortcut icon" href="favicon.png" type="image/x-icon">
@@ -42,6 +42,37 @@
 </head>
 
 <body>
+  <div class="navbar" id="nav1">
+    <div class="row">
+      <a class="toggle" gumby-trigger="#nav1 &gt; .row &gt; ul" href="#"><i class="icon-menu"></i></a>
+      <h1 class="four columns logo">
+        <a href="#">
+          <img src="img/dev_dnath_logo.png" gumby-retina="">
+        </a>
+      </h1>
+      <nav class="pull_right">
+        <ul class="eight columns">
+        <li><a href="bio.html">About Me</a></li>
+        <li><a href="research.html">Research</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li>
+          <a href="#">Stuff+</a>
+          <div class="dropdown">
+            <ul>
+              <li><a href="photos.html">Photography</a></li>
+              <li><a href="#">Item</a></li>
+              <li><a href="#">Item</a></li>
+            </ul>
+          </div>
+        </li>
+        <p class="medium pretty default btn icon-github icon-left">
+          <a href="https://github.com/dnath">GitHub</a>
+        </p>
+        <!-- <li class="field"><input class="search input" type="search" placeholder="Search"></li> -->
+      </nav>
+      </ul>
+    </div>
+  </div>
 
 
 	<!-- Grab Google CDN's jQuery, fall back to local if offline -->
@@ -64,20 +95,7 @@
 	}
 	</script>
 
-	<!--
-	Include gumby.js followed by UI modules followed by gumby.init.js
-	Or concatenate and minify into a single file -->
-	<script gumby-touch="js/libs" src="bower_components/gumby/js/libs/gumby.js"></script>
-	<script src="bower_components/gumby/js/libs/ui/gumby.retina.js"></script>
-	<script src="bower_components/gumby/js/libs/ui/gumby.fixed.js"></script>
-	<script src="bower_components/gumby/js/libs/ui/gumby.skiplink.js"></script>
-	<script src="bower_components/gumby/js/libs/ui/gumby.toggleswitch.js"></script>
-	<script src="bower_components/gumby/js/libs/ui/gumby.checkbox.js"></script>
-	<script src="bower_components/gumby/js/libs/ui/gumby.radiobtn.js"></script>
-	<script src="bower_components/gumby/js/libs/ui/gumby.tabs.js"></script>
-	<script src="bower_components/gumby/js/libs/ui/gumby.navbar.js"></script>
-	<script src="bower_components/gumby/js/libs/ui/jquery.validation.js"></script>
-	<script src="bower_components/gumby/js/libs/gumby.init.js"></script>
+	<script src="js/gumby.min.js"></script>
 
 	<!--
 	Google's recommended deferred loading of JS
