Some more tweaks

--- a/index.html
+++ b/index.html
@@ -97,20 +97,22 @@
     <div class="row">
       <div class="four columns image rounded">
         <img src="img/dibyendu_nath.jpg" alt="Dibyendu Nath | Dev"/>
+        <div style="padding-top:20px">
+          <h5 class=""><i class="icon-mail"></i> dnath {at} cs . ucsb . edu</h5> 
+        </div>
       </div>
       <article class="eight columns">
         <h2>Hello, World !</h2>
         
-        <p>Hi, I'm <strong>Dibyendu</strong>, also known as <strong>Dev</strong>. First things first, a small intro from yours truly. To keep it brief and simple, I'm a <strong>Software Craftsmith</strong> ... half <em>Java Junkie,</em> half <em>C++ worshipper</em> and (sic:) one-third <em>Pythonista</em> with a splash of <em>Ruby.</em></p>
+        <p>Hi, I'm <strong>Dibyendu</strong>, also known as <strong>Dev</strong>. First things first, a small intro from yours truly. To keep it brief and simple, I'm a <strong>Software Craftsmith</strong> ... half <em>Java Junkie,</em> half <em>C++ worshipper</em> and (sic:) one-third <em>Pythonista</em> with a dash of <em>Ruby.</em></p>
 
-        <p>At present, I am a CS grad student at the <a href="http://www.ucsb.edu">University of California, Santa Barbara,</a> pursuing a Master's in <a href="http://www.cs.ucsb.edu">Computer Science.</a> Till quite recently I was a Software Engineering Intern at <a href="http://www.appfolio.com">AppFolio,</a> working on their data analytics team. Before starting graduate studies at UC Santa Barbara, I was a Software Development Engineer at <a href="http://www.mcafee.com">McAfee</a> in Bangalore, India.</p>
+        <p>I am a second year grad student at the <a href="http://www.ucsb.edu">University of California, Santa Barbara,</a> pursuing a Master's in <a href="http://www.cs.ucsb.edu">Computer Science.</a> I'm working in <a href="http://www.cs.ucsb.edu/~ckrintz/racelab.html">RACE Lab</a>, advised by <a href="http://www.cs.ucsb.edu/~ckrintz/">Prof. Chandra Krintz</a> and <a href="http://www.cs.ucsb.edu/~rich/">Prof. Rich Wolski.</a> Till quite recently I was a Software Engineering Intern at <a href="http://www.appfolio.com">AppFolio,</a> working on their data analytics team. Before starting graduate studies at UC Santa Barbara, I was a Software Development Engineer at <a href="http://www.mcafee.com">McAfee</a> in Bangalore, India.</p>
       </article>
     </div>
   </div>
 
     <div class="row">
       <div class="four columns">
-        <h5>Twitter Feed</h5>
         <a class="twitter-timeline" width="360" height="500" href="https://twitter.com/Dibyendu_Nath" data-widget-id="287681856625836032">Tweets by @Dibyendu_Nath</a>
         <script>
           !function(d,s,id){
@@ -123,17 +125,13 @@
           }(document,"script","twitter-wjs");
         </script>
       </div>
-
-      <div class="eight columns" style="padding-left:20px;padding-top:20px">
-        <h5 class="text_center"><i class="icon-mail"></i> dnath [at] cs . ucsb . edu</h5> 
-      </div>
        
-      <div class="eight columns" style="padding-left:20px;padding-top:50px">
-        <div class="four columns image">
+      <div class="eight columns" style="padding-left:40px;padding-top:40px">
+        <div class="five columns image">
           <a target="_blank" href="http://www.ucsb.edu/"><img src="img/ucsb_logo.jpg" alt="University of California, Santa Barbara"></img></a>
-        </div> 
+        </div>
         <div class="two columns image">
-          <a target="_blank" href="http://www.mcafee.com/"><img src="img/mcafee_logo.jpg" alt="McAfee Inc. | Intel Security"></img></a>
+          <a class="centerted" target="_blank" href="http://www.mcafee.com/"><img src="img/mcafee_logo.jpg" alt="McAfee Inc. | Intel Security"></img></a>
         </div>
         <div class="two columns image">
           <a target="_blank" href="http://www.appfolio.com/"><img src="img/appfolio_logo.png" alt="AppFolio Inc."></img></a>
@@ -211,22 +209,7 @@
 	<script src="bower_components/gumby/js/plugins.js"></script>
 	<script src="bower_components/gumby/js/main.js"></script>
 
-	<!-- Change UA-XXXXX-X to be your site's ID -->
-	<!--<script>
-	window._gaq = [['_setAccount','UAXXXXXXXX1'],['_trackPageview'],['_trackPageLoadTime']];
-	Modernizr.load({
-	  load: ('https:' == location.protocol ? '//ssl' : '//www') + '.google-analytics.com/ga.js'
-	});
-	</script>-->
-
-	<!-- Prompt IE 6 users to install Chrome Frame. Remove this if you want to support IE 6.
-	   chromium.org/developers/how-tos/chrome-frame-getting-started -->
-	<!--[if lt IE 7 ]>
-	<script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
-	<script>window.attachEvent('onload',function(){CFInstall.check({mode:'overlay'})})</script>
-	<![endif]-->
-
-  <!-- Google Analytics
+	<!-- Google Analytics -->
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -235,7 +218,14 @@
 
     ga('create', 'UA-37271883-3', 'auto');
     ga('send', 'pageview');
-  </script>-->
+  </script>
+
+	<!-- Prompt IE 6 users to install Chrome Frame. Remove this if you want to support IE 6.
+	   chromium.org/developers/how-tos/chrome-frame-getting-started -->
+	<!--[if lt IE 7 ]>
+	<script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
+	<script>window.attachEvent('onload',function(){CFInstall.check({mode:'overlay'})})</script>
+	<![endif]-->
 
   </body>
 </html>
