--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 	<meta itemprop="image" content="">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+	
+	<meta property="fb:admins" content="100001639762906" />
 
 	<link rel="stylesheet" href="css/gumby.css">
 
