--- a/index.html
+++ b/index.html
@@ -9,43 +9,44 @@
 <html class="no-js" lang="en" itemscope="" itemtype="http://schema.org/Product">
 <!--<![endif]-->
 <head>
-	<meta charset="utf-8">
+  <meta charset="utf-8">
 
-	<!-- Use the .htaccess and remove these lines to avoid edge case issues.
-			 More info: h5bp.com/b/378 -->
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <!-- Use the .htaccess and remove these lines to avoid edge case issues.
+       More info: h5bp.com/b/378 -->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-	<title>Dibyendu Nath | Dev - Personal Website</title>
-	<meta name="description" content="Personal Website of Dibyendu 'Dev' Nath, Coder, Dreamer, Wanderer, Fauxtographer">
-	<meta name="keywords" content="dev,dibyendu,nath,dnath,devnath,racelab,stochss,ucsb,appfolio,mcafee,eeff,encryption,cloud computing,santa barbara">
-	<meta name="author" content="humans.txt">
+  <title>Dibyendu Nath | Dev : Homepage</title>
+  <meta name="description" content="Personal Website of Dibyendu 'Dev' Nath, Coder, Dreamer, Wanderer, Fauxtographer, CS Grad Student st University of California, Santa Barbara">
+  <meta name="keywords" content="dev,dibyendu,nath,dnath,devnath,racelab,stochss,ucsb,appfolio,mcafee,eeff,encryption,cloud computing,santa barbara">
+  <meta name="author" content="humans.txt">
 
-	<link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 
-	<!-- Facebook Metadata /-->
-	<meta property="fb:page_id" content="">
-	<meta property="og:image" content="">
-	<meta property="og:description" content="">
-	<meta property="og:title" content="Personal Website of Dibyendu Nath | Dev">
+  <!-- Facebook Metadata /-->
+<!--   <meta property="fb:page_id" content="">
+  <meta property="og:image" content="">
+  <meta property="og:description" content="">
+  <meta property="og:title" content="Personal Website of Dibyendu Nath | Dev"> -->
 
-	<!-- Google+ Metadata /-->
-	<meta itemprop="name" content="">
-	<meta itemprop="description" content="">
-	<meta itemprop="image" content="">
+  <!-- Google+ Metadata /-->
+ <!--  <meta itemprop="name" content="">
+  <meta itemprop="description" content="Personal Website of Dibyendu 'Dev' Nath, Coder, Dreamer, Wanderer, Fauxtographer, CS Grad Student st University of California, Santa Barbara">
+  <meta itemprop="image" content="img/dibyendu_nath.jpg"> -->
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 	
 	<meta property="fb:admins" content="100001639762906" />
 
-	<link rel="stylesheet" href="css/gumby.css">
+  <link rel="stylesheet" href="css/gumby.css">
 
-	<script src="bower_components/gumby/js/libs/modernizr-2.6.2.min.js"></script>
+  <script src="bower_components/gumby/js/libs/modernizr-2.6.2.min.js"></script>
 
   <link href="img/favicon.ico" rel="shortcut icon" type="image/x-icon" />
 </head>
 
 <body>
   <div class="super_wrapper">
+  
   <div class="navcontain">
     <div class="navbar" gumby-fixed="top" id="nav1">
     <div class="row">
@@ -113,42 +114,41 @@
     </div>
   </div>
 
-    <div class="row">
-      <div class="four columns">
-        <a class="twitter-timeline" width="360" height="500" href="https://twitter.com/Dibyendu_Nath" data-widget-id="287681856625836032">Tweets by @Dibyendu_Nath</a>
-        <script>
-          !function(d,s,id){
-            var js,fjs=d.getElementsByTagName(s)[0];
-            if(!d.getElementById(id)){
-              js=d.createElement(s);js.id=id;
-              js.src="//platform.twitter.com/widgets.js";
-              fjs.parentNode.insertBefore(js,fjs);
-            }
-          }(document,"script","twitter-wjs");
-        </script>
+  <div class="row">
+    <div class="four columns">
+      <a class="twitter-timeline" width="360" height="500" href="https://twitter.com/Dibyendu_Nath" data-widget-id="287681856625836032">Tweets by @Dibyendu_Nath</a>
+      <script>
+      !function(d,s,id){
+        var js,fjs=d.getElementsByTagName(s)[0];
+        if(!d.getElementById(id)){
+          js=d.createElement(s);js.id=id;
+          js.src="//platform.twitter.com/widgets.js";
+          fjs.parentNode.insertBefore(js,fjs);
+        }
+      }(document,"script","twitter-wjs");
+      </script>
+    </div>
+     
+    <div class="eight columns" style="padding-left:40px;padding-top:40px">
+      <div class="five columns image">
+        <a target="_blank" href="http://www.ucsb.edu/"><img src="img/ucsb_logo.jpg" alt="University of California, Santa Barbara"></img></a>
       </div>
-       
-      <div class="eight columns" style="padding-left:40px;padding-top:40px">
-        <div class="five columns image">
-          <a target="_blank" href="http://www.ucsb.edu/"><img src="img/ucsb_logo.jpg" alt="University of California, Santa Barbara"></img></a>
-        </div>
-        <div class="two columns image">
-          <a class="centerted" target="_blank" href="http://www.mcafee.com/"><img src="img/mcafee_logo.jpg" alt="McAfee Inc. | Intel Security"></img></a>
-        </div>
-        <div class="two columns image">
-          <a target="_blank" href="http://www.appfolio.com/"><img src="img/appfolio_logo.png" alt="AppFolio Inc."></img></a>
-        </div>
-        <div class="two columns image">
-          <a target="_blank" href="http://cs.ucsb.edu/"><img src="img/ucsb_cs_logo.png" alt="UCSB Computer Science"></img></a>
-        </div>
-        <div class="three columns image">
-          <a target="_blank" href="http://www.cs.ucsb.edu/~ckrintz/racelab.html"><img src="img/racelab_logo.png" alt="RACE Lab, UC Santa Barbara"></img></a>
-        </div>
+      <div class="two columns image">
+        <a class="centerted" target="_blank" href="http://www.mcafee.com/"><img src="img/mcafee_logo.jpg" alt="McAfee Inc. | Intel Security"></img></a>
+      </div>
+      <div class="two columns image">
+        <a target="_blank" href="http://www.appfolio.com/"><img src="img/appfolio_logo.png" alt="AppFolio Inc."></img></a>
+      </div>
+      <div class="two columns image">
+        <a target="_blank" href="http://cs.ucsb.edu/"><img src="img/ucsb_cs_logo.png" alt="UCSB Computer Science"></img></a>
+      </div>
+      <div class="three columns image">
+        <a target="_blank" href="http://www.cs.ucsb.edu/~ckrintz/racelab.html"><img src="img/racelab_logo.png" alt="RACE Lab, UC Santa Barbara"></img></a>
       </div>
     </div>
-
-    <div class="row" style="padding-bottom:80px">
-    </div>
+  </div>
+   
+  <div class="row" style="padding-bottom:80px"></div>
 
   </div>
   
@@ -164,70 +164,70 @@
   </div>
 
 
-	<!-- Grab Google CDN's jQuery, fall back to local if offline -->
-	<!-- 2.0 for modern browsers, 1.10 for .oldie -->
-	<script>
-	var oldieCheck = Boolean(document.getElementsByTagName('html')[0].className.match(/\soldie\s/g));
-	if(!oldieCheck) {
-	document.write('<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"><\/script>');
-	} else {
-	document.write('<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"><\/script>');
-	}
-	</script>
-	<script>
-	if(!window.jQuery) {
-	if(!oldieCheck) {
-	  document.write('<script src="bower_components/gumby/js/libs/jquery-2.0.2.min.js"><\/script>');
-	} else {
-	  document.write('<script src="bower_components/gumby/js/libs/jquery-1.10.1.min.js"><\/script>');
-	}
-	}
-	</script>
-
-	<script src="js/gumby.min.js"></script>
-
-	<!--
-	Google's recommended deferred loading of JS
-	gumby.min.js contains gumby.js, all UI modules and gumby.init.js
-
-	Note: If you opt to use this method of defered loading,
-	ensure that any javascript essential to the initial
-	display of the page is included separately in a normal
-	script tag.
-
-	<script type="text/javascript">
-	function downloadJSAtOnload() {
-	var element = document.createElement("script");
-	element.src = "js/libs/gumby.min.js";
-	document.body.appendChild(element);
-	}
-	if (window.addEventListener)
-	window.addEventListener("load", downloadJSAtOnload, false);
-	else if (window.attachEvent)
-	window.attachEvent("onload", downloadJSAtOnload);
-	else window.onload = downloadJSAtOnload;
-	</script> -->
-
-	<script src="bower_components/gumby/js/plugins.js"></script>
-	<script src="bower_components/gumby/js/main.js"></script>
-
-	<!-- Google Analytics -->
+  <!-- Grab Google CDN's jQuery, fall back to local if offline -->
+  <!-- 2.0 for modern browsers, 1.10 for .oldie -->
   <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-37271883-3', 'auto');
-    ga('send', 'pageview');
+  var oldieCheck = Boolean(document.getElementsByTagName('html')[0].className.match(/\soldie\s/g));
+  if(!oldieCheck) {
+  document.write('<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"><\/script>');
+  } else {
+  document.write('<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"><\/script>');
+  }
+  </script>
+  <script>
+  if(!window.jQuery) {
+  if(!oldieCheck) {
+    document.write('<script src="bower_components/gumby/js/libs/jquery-2.0.2.min.js"><\/script>');
+  } else {
+    document.write('<script src="bower_components/gumby/js/libs/jquery-1.10.1.min.js"><\/script>');
+  }
+  }
   </script>
 
-	<!-- Prompt IE 6 users to install Chrome Frame. Remove this if you want to support IE 6.
-	   chromium.org/developers/how-tos/chrome-frame-getting-started -->
-	<!--[if lt IE 7 ]>
-	<script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
-	<script>window.attachEvent('onload',function(){CFInstall.check({mode:'overlay'})})</script>
-	<![endif]-->
+  <script src="js/gumby.min.js"></script>
+
+  <!--
+  Google's recommended deferred loading of JS
+  gumby.min.js contains gumby.js, all UI modules and gumby.init.js
+
+  Note: If you opt to use this method of defered loading,
+  ensure that any javascript essential to the initial
+  display of the page is included separately in a normal
+  script tag.
+
+  <script type="text/javascript">
+  function downloadJSAtOnload() {
+  var element = document.createElement("script");
+  element.src = "js/libs/gumby.min.js";
+  document.body.appendChild(element);
+  }
+  if (window.addEventListener)
+  window.addEventListener("load", downloadJSAtOnload, false);
+  else if (window.attachEvent)
+  window.attachEvent("onload", downloadJSAtOnload);
+  else window.onload = downloadJSAtOnload;
+  </script> -->
+
+  <script src="bower_components/gumby/js/plugins.js"></script>
+  <script src="bower_components/gumby/js/main.js"></script>
+
+  <!-- Google Analytics -->
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-37271883-3', 'auto');
+  ga('send', 'pageview');
+  </script>
+
+  <!-- Prompt IE 6 users to install Chrome Frame. Remove this if you want to support IE 6.
+     chromium.org/developers/how-tos/chrome-frame-getting-started -->
+  <!--[if lt IE 7 ]>
+  <script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
+  <script>window.attachEvent('onload',function(){CFInstall.check({mode:'overlay'})})</script>
+  <![endif]-->
 
   </body>
 </html>
