Added fb, g+ meta tags

--- a/projects.html
+++ b/projects.html
@@ -23,15 +23,16 @@
   <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 
   <!-- Facebook Metadata /-->
-<!--   <meta property="fb:page_id" content="">
-  <meta property="og:image" content="">
-  <meta property="og:description" content="">
-  <meta property="og:title" content="Personal Website of Dibyendu Nath | Dev"> -->
+  <meta property="fb:page_id" content="">
+  <meta property="fb:admins" content="100001639762906" />
+  <meta property="og:image" content="img/dibyendu_nath.jpg">
+  <meta property="og:description" content="Projects | Dibyendu 'Dev' Nath, Coder, Dreamer, CS Grad Student st University of California, Santa Barbara">
+  <meta property="og:title" content="Dibyendu Nath | Dev : Projects">
 
   <!-- Google+ Metadata /-->
-<!--   <meta itemprop="name" content="">
-  <meta itemprop="description" content="">
-  <meta itemprop="image" content=""> -->
+  <meta itemprop="name" content="Dibyendu Nath | Dev : Projects">
+  <meta itemprop="description" content="Projects | Dibyendu 'Dev' Nath, Coder, Dreamer, CS Grad Student st University of California, Santa Barbara">
+  <meta itemprop="image" content="img/dibyendu_nath.jpg">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
