--- a/index.html
+++ b/index.html
@@ -23,19 +23,18 @@
   <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 
   <!-- Facebook Metadata /-->
-<!--   <meta property="fb:page_id" content="">
-  <meta property="og:image" content="">
-  <meta property="og:description" content="">
-  <meta property="og:title" content="Personal Website of Dibyendu Nath | Dev"> -->
+  <meta property="fb:page_id" content="">
+  <meta property="fb:admins" content="100001639762906" />
+  <meta property="og:image" content="img/dibyendu_nath.jpg">
+  <meta property="og:description" content="Personal Website of Dibyendu 'Dev' Nath, Coder, Dreamer, Wanderer, Fauxtographer, CS Grad Student st University of California, Santa Barbara">
+  <meta property="og:title" content="Dibyendu Nath | Dev : Homepage">
 
   <!-- Google+ Metadata /-->
- <!--  <meta itemprop="name" content="">
+  <meta itemprop="name" content="Dibyendu Nath | Dev : Homepage">
   <meta itemprop="description" content="Personal Website of Dibyendu 'Dev' Nath, Coder, Dreamer, Wanderer, Fauxtographer, CS Grad Student st University of California, Santa Barbara">
-  <meta itemprop="image" content="img/dibyendu_nath.jpg"> -->
+  <meta itemprop="image" content="img/dibyendu_nath.jpg">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-	
-	<meta property="fb:admins" content="100001639762906" />
 
   <link rel="stylesheet" href="css/gumby.css">
 
