Fixed fb, g+ meta image tags

--- a/projects.html
+++ b/projects.html
@@ -25,14 +25,14 @@
   <!-- Facebook Metadata /-->
   <meta property="fb:page_id" content="">
   <meta property="fb:admins" content="100001639762906" />
-  <meta property="og:image" content="img/dibyendu_nath.jpg">
+  <meta property="og:image" content="http://dnath.github.io/img/dibyendu_nath.jpg">
   <meta property="og:description" content="Projects | Dibyendu 'Dev' Nath, Coder, Dreamer, CS Grad Student st University of California, Santa Barbara">
   <meta property="og:title" content="Dibyendu Nath | Dev : Projects">
 
   <!-- Google+ Metadata /-->
   <meta itemprop="name" content="Dibyendu Nath | Dev : Projects">
   <meta itemprop="description" content="Projects | Dibyendu 'Dev' Nath, Coder, Dreamer, CS Grad Student st University of California, Santa Barbara">
-  <meta itemprop="image" content="img/dibyendu_nath.jpg">
+  <meta itemprop="image" content="http://dnath.github.io/img/dibyendu_nath.jpg">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
