--- a/index.html
+++ b/index.html
@@ -218,6 +218,7 @@
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
   ga('create', 'UA-37271883-3', 'auto');
+  ga('require', 'displayfeatures');
   ga('send', 'pageview');
   </script>
 
