Added StochSS to research

--- a/research.html
+++ b/research.html
@@ -92,6 +92,40 @@
     </div>
   </div>
   </div>
+
+  <div class="row" style="padding-top:20px">
+    <div class="row">
+      <div class="four columns image rounded">
+        <img src="img/stochss.png" alt="StochSS | Stochastic Simulation As a Service"/>
+        <div style="padding-top:20px">
+          <h5>
+            <i class="icon-globe"></i>
+            <a class="default_color red_glow" href="http://www.stochss.org/">http://www.stochss.org</a>
+          </h5> 
+          <h5>
+            <i class="icon-github"></i>
+            <a class="default_color red_glow" href="https://github.com/stochss/stochss">github.com/stochss</a>
+          </h5> 
+        </div>
+      </div>
+      <article class="eight columns">
+        <div class="row">
+          <h3><strong>StochSS:</strong> Stochastic Simulation as a Service</h3>
+          <h5>Advisors: <a class="red_glow" href="http://www.cs.ucsb.edu/~ckrintz">Prof. Chandra Krintz,</a> 
+            <a class="red_glow" href="http://www.cs.ucsb.edu/~rich">Prof. Rich Wolski</a></h5>
+        </div>
+        <div style="padding-top:10px;">
+          <p>StochSS is a NIH funded project whose aim is to provide an integrated development environment (IDE) for running discrete stochastic simulations of biochemical networks and population systems in cloud somputing environments. </p>
+
+          <ul class="square">
+            <li>Building a generic cloud computing framework for configuring virtual machines and auto-deploying arbitary scientific simulation programs in the cloud by wrapping the source code as a web service.</li>
+
+            <li>Working on data management extension for analyzing and visualizing terabyte scale generated simulation output, distributed across cloud compute nodes (eg. HDFS) and/or cloud storage (eg. Amazon S3).</li>
+          </ul>
+      </div>
+      </article>
+    </div>
+  </div>
   
   <div class="row" style="padding-bottom:80px"></div>
 
