Added Projects - AppFolio, EEFF

--- a/projects.html
+++ b/projects.html
@@ -93,6 +93,82 @@
   </div>
   </div>
 
+  <div class="row" style="padding-top:20px">
+    <div class="row">
+      <div class="three columns image rounded">
+        <img src="img/af_apm.png" alt="AppFolio Property Manager"/>
+        <div style="padding-top:20px">
+          <h6 class="text_center">
+            <a class="default_color red_glow" href="http://www.appfolio.com/">
+              <i class="icon-globe"></i>AppFolio Inc.
+            </a>
+          </h6> 
+        </div>
+      </div>
+      <article class="nine columns">
+        <div class="row">
+          <h3><strong>RentMatch: Pricing Analytics at AppFolio</strong></h3>
+          <h5>Software Engineering Intern, Data Science team, <a class="red_glow" href="http://www.appfolio.com">AppFolio Inc.</a></h5>
+          <h6>June 2014 - September 2014</h6>
+        </div>
+        <div style="padding-top:10px;">
+          <p>AppFolio provides a web-based Property Management SaaS solution designed to help professional property managers to market and manage their portfolios.</p>
+
+          <ul class="square">
+            <li>
+              Worked in AppFolio’s Data Science team on finding Rental Unit Similarity using NLP techniques over text fields with tools like NLTK, Stanford NLP.
+            </li>
+            <li>
+              Used Machine Learning methods based on extracted features like amenities, school districts, location, linked census data, etc to predict similar units.
+            </li>
+            <li>
+              Built <strong>Super Squirrel,</strong> a <em>MapReduce</em> like framework for collecting and processing data, distributed across AppFolio’s data centers.
+            </li>
+            <li>
+              Hacked a Google Glass App <strong>Eyepatch,</strong> as a hackathon project for making voice activated property inspections using AppFolio's services as backend.
+            </li>
+          </ul>
+      </div>
+      </article>
+    </div>
+    </div>
+    
+    <div class="row" style="padding-top:40px;">
+
+      <div class="three columns image rounded">
+        <img src="img/mcafee_cdd.png" alt="McAfee Complete Data Protection, formerly known as Endpoint Encryption for Files & Folders"/>
+        <div style="padding-top:20px">
+          <h5 class="text_center">
+            <a class="default_color red_glow" href="http://www.mcafee.com/us/products/complete-data-protection.aspx"><i class="icon-globe"></i>McAfee Complete Data Protection</a>
+          </h5>
+          <h6 class="text_center">Formerly known as <br/>McAfee EEFF</h6> 
+        </div>
+      </div>
+      <article class="nine columns">
+        <div class="row">
+          <h3><strong>McAfee Endpoint Encryption for Files & Folders</strong></h3>
+          <h5>Software Development Engineer, EEFF team, <a class="red_glow" href="http://www.mcafee.com">McAfee Inc.</a></h5>
+          <h6>February 2012 - August 2013</h6>
+        </div>
+        <div style="padding-top:10px;">
+          <p>EEFF, now part of McAfee Complete Data Protection is an enterprize encryption product for Windows endpoints, controlled by McAfee ePO servers. It intercepts read/write calls to the file system using a filter driver and encrypts/decrypts data according to policies set.</p>
+
+          <ul class="square">
+            <li>
+              Worked on releases 3.2.9, 4.1 &amp; 4.2 – contributed to client-side (including filter driver development) as well as server-side ePO management codebase.
+            <li>
+              Developed <strong>'Kill Pill'</strong> Proof of Concept – remote deactivation and secure wiping of encrypted USB devices (EERM: endpoint encryption for removable media).
+            </li>
+            <li>
+              Other features developed include <strong>Key Cache Expiry,</strong> code overhaul for <strong>FIPS 140-2</strong> encryption standard compliance, Role-Based Key Management, enhanced encrypted removable media recovery, etc.
+            </li>
+          </ul>
+      </div>
+      </article>
+    </div>
+
+  </div>
+
   <div class="row" style="padding-bottom:80px"></div>
 
   </div>
