--- a/research.html
+++ b/research.html
@@ -95,16 +95,18 @@
 
   <div class="row" style="padding-top:20px">
     <div class="row">
-      <div class="four columns image rounded">
+      <div class="four columns image rounded pull_center">
         <img src="img/stochss.png" alt="StochSS | Stochastic Simulation As a Service"/>
         <div style="padding-top:20px">
-          <h5>
-            <i class="icon-globe"></i>
-            <a class="default_color red_glow" href="http://www.stochss.org/">http://www.stochss.org</a>
+          <h5 class="text_center">
+            <a class="default_color red_glow" href="http://www.stochss.org/">
+              <i class="icon-globe"></i>http://www.stochss.org
+            </a>
           </h5> 
-          <h5>
-            <i class="icon-github"></i>
-            <a class="default_color red_glow" href="https://github.com/stochss/stochss">github.com/stochss</a>
+          <h5 class="text_center">
+            <a class="default_color red_glow" href="https://github.com/stochss/stochss">
+              <i class="icon-github"></i>github.com/stochss
+            </a>
           </h5> 
         </div>
       </div>
