--- a/research.html
+++ b/research.html
@@ -100,7 +100,7 @@
         <div style="padding-top:20px">
           <h5 class="text_center">
             <a class="default_color red_glow" href="http://www.stochss.org/">
-              <i class="icon-globe"></i>http://www.stochss.org
+              <i class="icon-globe"></i>StochSS.org
             </a>
           </h5> 
           <h5 class="text_center">
@@ -115,6 +115,9 @@
           <h3><strong>StochSS:</strong> Stochastic Simulation as a Service</h3>
           <h5>Advisors: <a class="red_glow" href="http://www.cs.ucsb.edu/~ckrintz">Prof. Chandra Krintz,</a> 
             <a class="red_glow" href="http://www.cs.ucsb.edu/~rich">Prof. Rich Wolski</a></h5>
+          <h6>
+            <a class="default_color red_glow" href="http://www.cs.ucsb.edu/~ckrintz/racelab.html">RACE Lab,</a> 
+            <a class="default_color red_glow" href="http://www.ucsb.edu/">UC Santa Barbara</a></h6>
         </div>
         <div style="padding-top:10px;">
           <p>StochSS is a NIH funded project whose aim is to provide an integrated development environment (IDE) for running discrete stochastic simulations of biochemical networks and population systems in cloud somputing environments. </p>
@@ -123,6 +126,38 @@
             <li>Building a generic cloud computing framework for configuring virtual machines and auto-deploying arbitary scientific simulation programs in the cloud by wrapping the source code as a web service.</li>
 
             <li>Working on data management extension for analyzing and visualizing terabyte scale generated simulation output, distributed across cloud compute nodes (eg. HDFS) and/or cloud storage (eg. Amazon S3).</li>
+          </ul>
+      </div>
+      </article>
+    </div>
+
+    <div class="row" style="padding-top:40px;">
+      <div class="four columns image rounded pull_center">
+        <img src="img/ir.png" alt="Query Expansion Improvement in Terrier IR platform"/>
+        <div>
+          <h5 class="text_center">
+            <a class="default_color red_glow" href="http://terrier.org/">
+              <i class="icon-globe"></i>Terrier.org
+            </a>
+          </h5> 
+        </div>
+      </div>
+      <article class="eight columns">
+        <div class="row">
+          <h3><strong>Terrier IR:</strong> Query Expansion Improvement</h3>
+          <h5>Advisors: <a class="red_glow" href="http://www.isical.ac.in/~mandar/">Prof. Mandar Mitra</a></h5>
+          <h6>
+            <a class="default_color red_glow" href="http://www.isical.ac.in/">CV &amp; PR Unit, Indian Statistical Institute</a>
+        </div>
+        <div style="padding-top:10px;">
+          <p>Terrier is a highly flexible, efficient, and effective open source search engine, readily deployable on large corpora of documents.</p>
+
+          <ul class="square">
+            <li>Optimized search in Terrier IR engine by improving query expansion results, exploiting semantic relationships amongst words in conjunction with Local Context Analysis Techniques and implementing them in its Divergence From Randomness (DFR) framework.</li>
+
+            <li>
+              A part of the project, integration of WordNet (taxonomy of synsets) in Terrier was done as my Summer Project.
+            </li>
           </ul>
       </div>
       </article>
