--- a/research.html
+++ b/research.html
@@ -228,7 +228,7 @@
   <script src="bower_components/gumby/js/main.js"></script>
 
   <!-- Google Analytics -->
-  <script  type="text/javascript" src="js/google_tracker.js"></script>
+  <script src="js/google_tracker.js"></script>
 
   <!-- Prompt IE 6 users to install Chrome Frame. Remove this if you want to support IE 6.
      chromium.org/developers/how-tos/chrome-frame-getting-started -->
