--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <div class="four columns image rounded">
         <img src="img/dibyendu_nath.jpg" alt="Dibyendu Nath | Dev"/>
         <div style="padding-top:20px">
-          <h5 class=""><i class="icon-mail"></i> dnath {at} cs . ucsb . edu</h5> 
+          <h5 class=""><i class="icon-mail"></i> dev . nath . cs {at} gmail . com</h5> 
         </div>
       </div>
       <article class="eight columns">
