--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
   <title>Dibyendu Nath | Dev : Homepage</title>
-  <meta name="description" content="Personal Website of Dibyendu 'Dev' Nath, Coder, Dreamer, Wanderer, Fauxtographer, CS Grad Student st University of California, Santa Barbara">
-  <meta name="keywords" content="dev,dibyendu,nath,dnath,devnath,racelab,stochss,ucsb,appfolio,mcafee,eeff,encryption,cloud computing,santa barbara">
+  <meta name="description" content="Personal Website of Dibyendu 'Dev' Nath, Coder, Dreamer, Wanderer, Fauxtographer, Software Engineer at Google">
+  <meta name="keywords" content="dev,dibyendu,nath,dnath,devnath,racelab,stochss,ucsb,cloud computing,santa barbara,google">
   <meta name="author" content="humans.txt">
 
   <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
@@ -26,12 +26,12 @@
   <meta property="fb:page_id" content="">
   <meta property="fb:admins" content="100001639762906" />
   <meta property="og:image" content="http://dnath.github.io/img/dibyendu_nath.jpg">
-  <meta property="og:description" content="Personal Website of Dibyendu 'Dev' Nath, Coder, Dreamer, Wanderer, Fauxtographer, CS Grad Student st University of California, Santa Barbara">
+  <meta property="og:description" content="Personal Website of Dibyendu 'Dev' Nath, Coder, Dreamer, Wanderer, Fauxtographer, Software Engineer at Google">
   <meta property="og:title" content="Dibyendu Nath | Dev : Homepage">
 
   <!-- Google+ Metadata /-->
   <meta itemprop="name" content="Dibyendu Nath | Dev : Homepage">
-  <meta itemprop="description" content="Personal Website of Dibyendu 'Dev' Nath, Coder, Dreamer, Wanderer, Fauxtographer, CS Grad Student st University of California, Santa Barbara">
+  <meta itemprop="description" content="Personal Website of Dibyendu 'Dev' Nath, Coder, Dreamer, Wanderer, Fauxtographer, Software Engineer at Google">
   <meta itemprop="image" content="http://dnath.github.io/img/dibyendu_nath.jpg">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
@@ -108,14 +108,14 @@
         
         <p>Hi, I'm <strong>Dibyendu</strong>, also known as <strong>Dev</strong>. First things first, a small intro from yours truly. To keep it brief and simple, I'm a <strong>Software Craftsmith</strong> ... half <em>Java Junkie,</em> half <em>C++ worshipper</em> and (sic:) one-third <em>Pythonista</em> with a dash of <em>Ruby.</em></p>
 
-        <p>I am a second year grad student at the <a class="red_glow" href="http://www.ucsb.edu">University of California, Santa Barbara,</a> pursuing a Master's in <a class="red_glow" href="http://www.cs.ucsb.edu">Computer Science.</a> I'm working in <a class="red_glow" href="http://www.cs.ucsb.edu/~ckrintz/racelab.html">RACE Lab</a>, advised by <a class="red_glow" href="http://www.cs.ucsb.edu/~ckrintz/">Prof. Chandra Krintz</a> and <a class="red_glow" href="http://www.cs.ucsb.edu/~rich/">Prof. Rich Wolski.</a> Till quite recently I was a Software Engineering Intern at <a class="red_glow" href="http://www.appfolio.com">AppFolio,</a> working on their data analytics team. Before starting graduate studies at UC Santa Barbara, I was a Software Development Engineer at <a class="red_glow" href="http://www.mcafee.com">McAfee</a> in Bangalore, India.</p>
+        <p>I'm a Software Engineer at Google based out of Mountain View, California. Till quite recently, I was a grad student at the <a class="red_glow" href="http://www.ucsb.edu">University of California, Santa Barbara,</a> pursuing a Master's in <a class="red_glow" href="http://www.cs.ucsb.edu">Computer Science.</a> I was working in <a class="red_glow" href="http://www.cs.ucsb.edu/~ckrintz/racelab.html">RACE Lab</a>, advised by <a class="red_glow" href="http://www.cs.ucsb.edu/~ckrintz/">Prof. Chandra Krintz</a> and <a class="red_glow" href="http://www.cs.ucsb.edu/~rich/">Prof. Rich Wolski.</a> Before that, I was a Software Engineering Intern at <a class="red_glow" href="http://www.appfolio.com">AppFolio,</a> working on their data analytics team.
       </article>
     </div>
   </div>
 
   <div class="row">
     <div class="four columns">
-      <a class="twitter-timeline" width="360" height="500" href="https://twitter.com/Dibyendu_Nath" data-widget-id="287681856625836032">Tweets by @Dibyendu_Nath</a>
+      <a class="twitter-timeline" width="360" height="500" href="https://twitter.com/devn_th" data-widget-id="287681856625836032">Tweets by @devn_th</a>
       <script>
       !function(d,s,id){
         var js,fjs=d.getElementsByTagName(s)[0];
@@ -131,12 +131,6 @@
     <div class="eight columns" style="padding-left:40px;padding-top:40px">
       <div class="five columns image">
         <a target="_blank" href="http://www.ucsb.edu/"><img src="img/ucsb_logo.jpg" alt="University of California, Santa Barbara"></img></a>
-      </div>
-      <div class="two columns image">
-        <a class="centerted" target="_blank" href="http://www.mcafee.com/"><img src="img/mcafee_logo.jpg" alt="McAfee Inc. | Intel Security"></img></a>
-      </div>
-      <div class="two columns image">
-        <a target="_blank" href="http://www.appfolio.com/"><img src="img/appfolio_logo.png" alt="AppFolio Inc."></img></a>
       </div>
       <div class="two columns image">
         <a target="_blank" href="http://cs.ucsb.edu/"><img src="img/ucsb_cs_logo.png" alt="UCSB Computer Science"></img></a>
@@ -157,7 +151,7 @@
       <strong>Dibyendu Nath &copy; 2014</strong> 
     </div>
     <div class="pull_right">
-      <strong>October 2014</strong> 
+      <strong>September 2015</strong> 
     </div>
   </div>
   </div>
