--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <a target="_blank" href="https://www.linkedin.com/in/dibyendunath"><i class="social icon-linkedin"></i></a>
     </div>
     <div class="metro btn twitter pull_right">
-      <a target="_blank" href="https://twitter.com/Dibyendu_Nath"><i class="social icon-twitter"></i></a>
+      <a target="_blank" href="https://twitter.com/devn_th"><i class="social icon-twitter"></i></a>
     </div>
   </div>
   </div>
@@ -108,7 +108,7 @@
         
         <p>Hi, I'm <strong>Dibyendu</strong>, also known as <strong>Dev</strong>. First things first, a small intro from yours truly. To keep it brief and simple, I'm a <strong>Software Craftsmith</strong> ... half <em>Java Junkie,</em> half <em>C++ worshipper</em> and (sic:) one-third <em>Pythonista</em> with a dash of <em>Ruby.</em></p>
 
-        <p>I'm a Software Engineer at Google based out of Mountain View, California. Till quite recently, I was a grad student at the <a class="red_glow" href="http://www.ucsb.edu">University of California, Santa Barbara,</a> pursuing a Master's in <a class="red_glow" href="http://www.cs.ucsb.edu">Computer Science.</a> I was working in <a class="red_glow" href="http://www.cs.ucsb.edu/~ckrintz/racelab.html">RACE Lab</a>, advised by <a class="red_glow" href="http://www.cs.ucsb.edu/~ckrintz/">Prof. Chandra Krintz</a> and <a class="red_glow" href="http://www.cs.ucsb.edu/~rich/">Prof. Rich Wolski.</a> Before that, I was a Software Engineering Intern at <a class="red_glow" href="http://www.appfolio.com">AppFolio,</a> working on their data analytics team.
+        <p>I'm a Software Engineer at <a class="red_glow" href="http://www.google.com">Google,</a> based out of Mountain View, California. Till quite recently, I was a grad student at the <a class="red_glow" href="http://www.ucsb.edu">University of California, Santa Barbara,</a> pursuing a Master's in <a class="red_glow" href="http://www.cs.ucsb.edu">Computer Science.</a> I was working in <a class="red_glow" href="http://www.cs.ucsb.edu/~ckrintz/racelab.html">RACE Lab</a>, advised by <a class="red_glow" href="http://www.cs.ucsb.edu/~ckrintz/">Prof. Chandra Krintz</a> and <a class="red_glow" href="http://www.cs.ucsb.edu/~rich/">Prof. Rich Wolski.</a> Before that, I was a Software Engineering Intern at <a class="red_glow" href="http://www.appfolio.com">AppFolio,</a> working on their data analytics team.
       </article>
     </div>
   </div>
