--- a/projects.html
+++ b/projects.html
@@ -70,7 +70,7 @@
         </li> -->
         <li class="pull_right"><a href="projects.html">Projects</a></li>
         <li class="pull_right"><a href="research.html">Research</a></li>
-        <!-- <li><a href="bio.html">About Me</a></li> -->
+   <!-- <li><a href="bio.html">About Me</a></li> -->
       </ul>
     </div>
     </div>
@@ -88,7 +88,7 @@
       <a target="_blank" href="https://www.linkedin.com/in/dibyendunath"><i class="social icon-linkedin"></i></a>
     </div>
     <div class="metro btn twitter pull_right">
-      <a target="_blank" href="https://twitter.com/devn_th"><i class="social icon-twitter"></i></a>
+      <a target="_blank" href="https://twitter.com/d3vnath"><i class="social icon-twitter"></i></a>
     </div>
   </div>
   </div>
