--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <a target="_blank" href="https://www.linkedin.com/in/dibyendunath"><i class="social icon-linkedin"></i></a>
     </div>
     <div class="metro btn twitter pull_right">
-      <a target="_blank" href="https://twitter.com/devn_th"><i class="social icon-twitter"></i></a>
+      <a target="_blank" href="https://twitter.com/d3vnath"><i class="social icon-twitter"></i></a>
     </div>
   </div>
   </div>
@@ -115,7 +115,7 @@
 
   <div class="row">
     <div class="four columns">
-      <a class="twitter-timeline" width="360" height="500" href="https://twitter.com/devn_th" data-widget-id="287681856625836032">Tweets by @devn_th</a>
+      <a class="twitter-timeline" width="360" height="500" href="https://twitter.com/d3vnath" data-widget-id="287681856625836032">Tweets by @d3vnath</a>
       <script>
       !function(d,s,id){
         var js,fjs=d.getElementsByTagName(s)[0];
