--- a/research.html
+++ b/research.html
@@ -88,7 +88,7 @@
       <a target="_blank" href="https://www.linkedin.com/in/dibyendunath"><i class="social icon-linkedin"></i></a>
     </div>
     <div class="metro btn twitter pull_right">
-      <a target="_blank" href="https://twitter.com/devn_th"><i class="social icon-twitter"></i></a>
+      <a target="_blank" href="https://twitter.com/d3vnath"><i class="social icon-twitter"></i></a>
     </div>
   </div>
   </div>
