--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="row">
       <a class="toggle" gumby-trigger="#nav1 &gt; .row &gt; ul" href="#"><i class="icon-menu"></i></a>
       <h1 class="four columns logo">
-        <a href="http://dnath.github.io/"><img src="img/dev_dnath_logo.png" gumby-retina=""></a>
+        <a href="http://dnath.github.io/"><img alt="Dev | Dibyendu Nath" src="img/dev_dnath_logo.png" gumby-retina=""></a>
       </h1>
       <ul class="eight columns main-nav">
         <li class="pull_right" style="padding-left:10px">
@@ -108,7 +108,7 @@
         
         <p>Hi, I'm <strong>Dibyendu</strong>, also known as <strong>Dev</strong>. First things first, a small intro from yours truly. To keep it brief and simple, I'm a <strong>Software Craftsmith</strong> ... half <em>Java Junkie,</em> half <em>C++ worshipper</em> and (sic:) one-third <em>Pythonista</em> with a dash of <em>Ruby.</em></p>
 
-        <p>I'm a Software Engineer at <a class="red_glow" href="http://www.google.com">Google,</a> based out of Mountain View, California. Till quite recently, I was a grad student at the <a class="red_glow" href="http://www.ucsb.edu">University of California, Santa Barbara,</a> pursuing a Master's in <a class="red_glow" href="http://www.cs.ucsb.edu">Computer Science.</a> I was working in <a class="red_glow" href="http://www.cs.ucsb.edu/~ckrintz/racelab.html">RACE Lab</a>, advised by <a class="red_glow" href="http://www.cs.ucsb.edu/~ckrintz/">Prof. Chandra Krintz</a> and <a class="red_glow" href="http://www.cs.ucsb.edu/~rich/">Prof. Rich Wolski.</a> Before that, I was a Software Engineering Intern at <a class="red_glow" href="http://www.appfolio.com">AppFolio,</a> working on their data analytics team.
+        <p>I'm a Software Engineer at <a class="red_glow" href="http://www.google.com">Google,</a> based out of Mountain View, California, working on Google Shopping infrastructure. Till quite recently, I was a graduate student at the <a class="red_glow" href="http://www.ucsb.edu">University of California, Santa Barbara,</a> pursuing a Master's in <a class="red_glow" href="http://www.cs.ucsb.edu">Computer Science.</a> I was working in <a class="red_glow" href="http://www.cs.ucsb.edu/~ckrintz/racelab.html">RACE Lab</a>, advised by <a class="red_glow" href="http://www.cs.ucsb.edu/~ckrintz/">Prof. Chandra Krintz</a> and <a class="red_glow" href="http://www.cs.ucsb.edu/~rich/">Prof. Rich Wolski.</a> Before that, I was a Software Engineering Intern at <a class="red_glow" href="http://www.appfolio.com">AppFolio,</a> working on their data analytics team.
       </article>
     </div>
   </div>
@@ -130,13 +130,13 @@
      
     <div class="eight columns" style="padding-left:40px;padding-top:40px">
       <div class="five columns image">
-        <a target="_blank" href="http://www.ucsb.edu/"><img src="img/ucsb_logo.jpg" alt="University of California, Santa Barbara"></img></a>
+        <a target="_blank" href="http://www.ucsb.edu/"><img src="img/ucsbwave-blue.png" alt="University of California, Santa Barbara"></a>
       </div>
       <div class="two columns image">
-        <a target="_blank" href="http://cs.ucsb.edu/"><img src="img/ucsb_cs_logo.png" alt="UCSB Computer Science"></img></a>
+        <a target="_blank" href="http://cs.ucsb.edu/"><img src="img/ucsb_cs_logo.png" alt="UCSB Computer Science"></a>
       </div>
       <div class="three columns image">
-        <a target="_blank" href="http://www.cs.ucsb.edu/~ckrintz/racelab.html"><img src="img/racelab_logo.png" alt="RACE Lab, UC Santa Barbara"></img></a>
+        <a target="_blank" href="http://www.cs.ucsb.edu/~ckrintz/racelab.html"><img src="img/racelab_logo.png" alt="RACE Lab, UC Santa Barbara"></a>
       </div>
     </div>
   </div>
@@ -148,10 +148,10 @@
   <div class="wrapper shaded footer">
     <div class="row">
     <div class="pull_left">
-      <strong>Dibyendu Nath &copy; 2014</strong> 
+      <strong>Dibyendu Nath &copy; 2016</strong> 
     </div>
     <div class="pull_right">
-      <strong>September 2015</strong> 
+      <strong>January 2016</strong> 
     </div>
   </div>
   </div>
