--- a/projects.html
+++ b/projects.html
@@ -50,7 +50,7 @@
     <div class="row">
       <a class="toggle" gumby-trigger="#nav1 &gt; .row &gt; ul" href="#"><i class="icon-menu"></i></a>
       <h1 class="four columns logo">
-        <a href="http://dnath.github.io/"><img src="img/dev_dnath_logo.png" gumby-retina=""></a>
+        <a href="http://dnath.github.io/"><img alt="Dev | Dibyendu Nath" src="img/dev_dnath_logo.png" gumby-retina=""></a>
       </h1>
       <ul class="eight columns main-nav">
         <li class="pull_right" style="padding-left:10px">
@@ -94,7 +94,33 @@
   </div>
 
   <div class="row" style="padding-top:20px">
+    
+    <!-- Google -->
     <div class="row">
+      <div class="three columns image rounded">
+        <img src="img/google_logo.gif" alt="Google"/>
+        <div style="padding-top:20px">
+          <h5 class="text_center">
+            <a class="default_color red_glow" href="http://www.google.com/">
+              <i class="icon-globe"></i>Google Inc.
+            </a>
+          </h5> 
+        </div>
+      </div>
+      <article class="nine columns">
+        <div class="row">
+          <h3><strong>Google Shopping Serving Infrastructure</strong></h3>
+          <h5>Software Engineer, <a class="red_glow" href="http://www.google.com">Google Inc.</a></h5>
+          <h6>August 2015 - Present</h6>
+        </div>
+        <div style="padding-top:10px;">
+          <p>Member of the development team for Google Shopping Serving Infrastructure.</p>
+      </div>
+      </article>
+    </div>
+
+    <!-- Appfolio -->
+    <div class="row" style="padding-top:40px;">
       <div class="three columns image rounded">
         <img src="img/af_apm.png" alt="AppFolio Property Manager"/>
         <div style="padding-top:20px">
@@ -116,25 +142,20 @@
 
           <ul class="square">
             <li>
-              Worked in AppFolio’s Data Science team on finding Rental Unit Similarity using NLP techniques over text fields with tools like NLTK, Stanford NLP.
-            </li>
-            <li>
-              Used Machine Learning methods based on extracted features like amenities, school districts, location, linked census data, etc to predict similar units.
-            </li>
+            Worked in AppFolio’s Pricing Analytics (Data Science) team on finding Rental Unit Similarity using machine learning methods based on features like amenities, associated text, school districts, location, linked census data, etc, extracted from customer data.
             <li>
               Built <strong>Super Squirrel,</strong> a <em>MapReduce</em> like framework for collecting and processing data, distributed across AppFolio’s data centers.
             </li>
             <li>
-              Hacked a Google Glass App <strong>Eyepatch,</strong> as a hackathon project for making voice activated property inspections using AppFolio's services as backend.
+              Developed a Google Glass App <strong>Eyepatch,</strong> as a 24-hr hackathon project for making voice activated property inspections using AppFolio's services as backends.
             </li>
           </ul>
-      </div>
+        </div>
       </article>
     </div>
-    </div>
     
+    <!-- McAfee -->
     <div class="row" style="padding-top:40px;">
-
       <div class="three columns image rounded">
         <img src="img/mcafee_cdd.png" alt="McAfee Complete Data Protection, formerly known as Endpoint Encryption for Files & Folders"/>
         <div style="padding-top:20px">
@@ -163,23 +184,21 @@
               Other features developed include <strong>Key Cache Expiry,</strong> code overhaul for <strong>FIPS 140-2</strong> encryption standard compliance, Role-Based Key Management, enhanced encrypted removable media recovery, etc.
             </li>
           </ul>
-      </div>
+        </div>
       </article>
     </div>
 
   </div>
 
   <div class="row" style="padding-bottom:80px"></div>
-
-  </div>
   
   <div class="wrapper shaded footer">
     <div class="row">
     <div class="pull_left">
-      <strong>Dibyendu Nath &copy; 2014</strong> 
+      <strong>Dibyendu Nath &copy; 2016</strong> 
     </div>
     <div class="pull_right">
-      <strong>October 2014</strong> 
+      <strong>January 2016</strong> 
     </div>
   </div>
   </div>
