--- a/projects.html
+++ b/projects.html
@@ -98,8 +98,9 @@
     <!-- Google -->
     <div class="row">
       <div class="three columns image rounded">
+        <!-- TODO: Find better logo -->
         <img src="img/google_logo.gif" alt="Google"/>
-        <div style="padding-top:20px">
+        <div style="padding-top:0px">
           <h5 class="text_center">
             <a class="default_color red_glow" href="http://www.google.com/">
               <i class="icon-globe"></i>Google Inc.
