updated google logo, projects

--- a/projects.html
+++ b/projects.html
@@ -110,7 +110,7 @@
       </div>
       <article class="nine columns">
         <div class="row">
-          <h3><strong>Google Shopping Serving Infrastructure</strong></h3>
+          <h3><strong>Google Shopping:</strong> Serving Infrastructure</h3>
           <h5>Software Engineer, <a class="red_glow" href="http://www.google.com">Google Inc.</a></h5>
           <h6>August 2015 - Present</h6>
         </div>
