--- a/projects.html
+++ b/projects.html
@@ -134,7 +134,7 @@
       </div>
       <article class="nine columns">
         <div class="row">
-          <h3><strong>RentMatch: Pricing Analytics at AppFolio</strong></h3>
+          <h3><strong>AppFolio RentMatch:</strong> Pricing Analytics</h3>
           <h5>Software Engineering Intern, Data Science team, <a class="red_glow" href="http://www.appfolio.com">AppFolio Inc.</a></h5>
           <h6>June 2014 - September 2014</h6>
         </div>
@@ -169,7 +169,7 @@
       <article class="nine columns">
         <div class="row">
           <h3><strong>McAfee Endpoint Encryption for Files & Folders</strong></h3>
-          <h5>Software Development Engineer, EEFF team, <a class="red_glow" href="http://www.mcafee.com">McAfee Inc.</a></h5>
+          <h5>Software Development Engineer, EEFF team, <a class="red_glow" href="http://www.mcafee.com">McAfee Inc. (<i>aka</i> Intel Security)</a></h5>
           <h6>February 2012 - August 2013</h6>
         </div>
         <div style="padding-top:10px;">
