--- a/projects.html
+++ b/projects.html
@@ -70,7 +70,7 @@
         </li> -->
         <li class="pull_right"><a href="projects.html">Projects</a></li>
         <li class="pull_right"><a href="research.html">Research</a></li>
-   <!-- <li><a href="bio.html">About Me</a></li> -->
+        <!-- <li><a href="bio.html">About Me</a></li> -->
       </ul>
     </div>
     </div>
@@ -168,7 +168,7 @@
       </div>
       <article class="nine columns">
         <div class="row">
-          <h3><strong>McAfee Endpoint Encryption for Files & Folders</strong></h3>
+          <h3><strong>McAfee Endpoint Encryption for Files &amp; Folders</strong></h3>
           <h5>Software Development Engineer, EEFF team, <a class="red_glow" href="http://www.mcafee.com">McAfee Inc. (<i>aka</i> Intel Security)</a></h5>
           <h6>February 2012 - August 2013</h6>
         </div>
@@ -193,6 +193,8 @@
 
   <div class="row" style="padding-bottom:80px"></div>
   
+  </div>
+
   <div class="wrapper shaded footer">
     <div class="row">
     <div class="pull_left">
