--- a/research.html
+++ b/research.html
@@ -123,9 +123,9 @@
           <p>StochSS is a NIH funded project whose aim is to provide an integrated development environment (IDE) for running discrete stochastic simulations of biochemical networks and population systems in cloud somputing environments. </p>
 
           <ul class="square">
-            <li>Building a generic cloud computing framework for configuring virtual machines and auto-deploying arbitary scientific simulation programs in the cloud by wrapping the source code as a web service.</li>
+            <li>Built a generic cloud computing framework for configuring virtual machines and auto-deploying/managing arbitrary scientific simulation programs in the cloud by wrapping the source code as a web service.</li>
 
-            <li>Working on data management extension for analyzing and visualizing terabyte scale generated simulation output, distributed across cloud compute nodes (eg. HDFS) and/or cloud storage (eg. Amazon S3).</li>
+            <li>Developed Flex Cloud, a lightweight cloud service abstraction layer for supporting simulation runs over different infrastructures (physical, virtual, as well as public or private clouds).</li>
           </ul>
       </div>
       </article>
@@ -171,10 +171,10 @@
   <div class="wrapper shaded footer">
     <div class="row">
     <div class="pull_left">
-      <strong>Dibyendu Nath &copy; 2014</strong> 
+      <strong>Dibyendu Nath &copy; 2016</strong> 
     </div>
     <div class="pull_right">
-      <strong>October 2014</strong> 
+      <strong>January 2016</strong> 
     </div>
   </div>
   </div>
