--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </li> -->
         <li class="pull_right"><a href="projects.html">Projects</a></li>
         <li class="pull_right"><a href="research.html">Research</a></li>
-        <!-- <li><a href="bio.html">About Me</a></li> -->
+        <li class="pull_right"><a href="index.html">Home</a></li>
       </ul>
     </div>
     </div>
