home fix for index

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </li> -->
         <li class="pull_right"><a href="projects.html">Projects</a></li>
         <li class="pull_right"><a href="research.html">Research</a></li>
-        <li class="pull_right"><a href="index.html">Home</a></li>
+        <li class="pull_right"><a href="#">Home</a></li>
       </ul>
     </div>
     </div>
