Update network links

--- a/index.html
+++ b/index.html
@@ -83,13 +83,19 @@
       <a href="files/resume_dibyendu_nath.pdf">Resume <i class="icon-download"></i></a>
     </div>
     <div class="metro btn gplus pull_right">
-      <a target="_blank" href="https://plus.google.com/u/0/+DibyenduNath-Dev-UCSB"><i class="social icon-gplus"></i></a>
+      <a target="_blank" href="https://plus.google.com/u/0/+DibyenduNath-Dev-UCSB">
+        <i class="social icon-gplus"></i><span class="hide">Google+ | Dev Nath</span>
+      </a>
     </div>
     <div class="metro btn linkedin pull_right">
-      <a target="_blank" href="https://www.linkedin.com/in/dibyendunath"><i class="social icon-linkedin"></i></a>
+      <a target="_blank" href="https://www.linkedin.com/in/dibyendunath">
+        <i class="social icon-linkedin"></i><span class="hide">LinkedIn | Dev Nath</span>
+      </a>
     </div>
     <div class="metro btn twitter pull_right">
-      <a target="_blank" href="https://twitter.com/d3vnath"><i class="social icon-twitter"></i></a>
+      <a target="_blank" href="https://twitter.com/d3vnath">
+        <i class="social icon-twitter"></i><span class="hide">Twitter | Dev Nath</span>
+      </a>
     </div>
   </div>
   </div>
