--- a/projects.html
+++ b/projects.html
@@ -68,7 +68,7 @@
             </ul>
           </div>
         </li> -->
-        <li class="pull_right"><a href="projects.html">Projects</a></li>
+        <li class="pull_right"><a href="#">Projects</a></li>
         <li class="pull_right"><a href="research.html">Research</a></li>
         <li class="pull_right"><a href="index.html">Home</a></li>
       </ul>
