--- a/research.html
+++ b/research.html
@@ -69,7 +69,7 @@
           </div>
         </li> -->
         <li class="pull_right"><a href="projects.html">Projects</a></li>
-        <li class="pull_right"><a href="research.html">Research</a></li>
+        <li class="pull_right"><a href="#">Research</a></li>
         <li class="pull_right"><a href="index.html">Home</a></li>
       </ul>
     </div>
