--- a/research.html
+++ b/research.html
@@ -50,7 +50,7 @@
     <div class="row">
       <a class="toggle" gumby-trigger="#nav1 &gt; .row &gt; ul" href="#"><i class="icon-menu"></i></a>
       <h1 class="four columns logo">
-        <a href="http://dnath.github.io/"><img src="img/dev_dnath_logo.png" gumby-retina=""></a>
+        <a href="http://dnath.github.io/"><img alt="Dev | Dibyendu Nath" src="img/dev_dnath_logo.png" gumby-retina=""></a>
       </h1>
       <ul class="eight columns main-nav">
         <li class="pull_right" style="padding-left:10px">
