--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
     <div class="row">
       <a class="toggle" gumby-trigger="#nav1 &gt; .row &gt; ul" href="#"><i class="icon-menu"></i></a>
       <h1 class="four columns logo">
-        <a href="http://dnath.github.io/"><img alt="Dev | Dibyendu Nath" src="img/dev_dnath_logo.png" gumby-retina=""></a>
+        <a href="http://dnath.github.io/">
+        <img alt="Dev | Dibyendu Nath" src="img/dev_dnath_logo.png" gumby-retina="">
+        </a>
       </h1>
       <ul class="eight columns main-nav">
         <li class="pull_right padding_left_20">
@@ -96,12 +98,12 @@
   <!-- social -->
   
   <div class="row" class="padding_top_20">
-    <div class="row">
-      <div class="four columns image rounded padding_top_20">
+    <div class="row padding_top_20">
+      <div class="four columns">
+        <div class="image rounded">
         <img src="img/dibyendu_nath.jpg" alt="Dibyendu Nath | Dev"/>
-        <div class="padding_top_20">
-          <h5 class=""><i class="icon-mail"></i> dev . nath . cs {at} gmail . com</h5> 
         </div>
+        <h5 class=""><i class="icon-mail"></i> dev . nath . cs {at} gmail . com</h5> 
       </div>
       <article class="eight columns padding_bottom_20">
         <h2>Hello, World !</h2>
