fix for footer social font

--- a/index.html
+++ b/index.html
@@ -147,22 +147,22 @@
   <div class="row">
   <div class="text_center social_footer_box">
   <a target="_blank" class="social_footer" href="https://twitter.com/d3vnath">
-    <i class="icon-twitter"> Twitter</i><span class="hide">Twitter | Dev Nath</span>
+    <i class="icon-twitter no_margin"></i>Twitter<span class="hide">Twitter | Dev Nath</span>
   </a> | 
   <a target="_blank" class="social_footer" href="https://www.facebook.com/d3vnath">
-    <i class="icon-facebook-squared"> Facebook</i><span class="hide">Facebook | Dev Nath</span>
-  </a> | 
+    <i class="icon-facebook-squared no_margin"></i>Facebook<span class="hide">Facebook | Dev Nath</span>
+  </a> |
   <a target="_blank" class="social_footer" href="https://www.linkedin.com/in/dibyendunath">
-    <i class="icon-linkedin"> LinkedIn</i><span class="hide">LinkedIn | Dev Nath</span>
+    <i class="icon-linkedin no_margin"></i>LinkedIn<span class="hide">LinkedIn | Dev Nath</span>
   </a> | 
   <a target="_blank" class="social_footer" href="https://github.com/dnath">
-    <i class="icon-github"> Github</i><span class="hide">GitHub | Dev Nath</span>
+    <i class="icon-github no_margin"></i>Github<span class="hide">GitHub | Dev Nath</span>
   </a> | 
   <a target="_blank" class="social_footer" href="https://plus.google.com/u/0/+DibyenduNath-Dev-UCSB">
-    <i class="icon-gplus"> Google+</i><span class="hide">Google+ | Dev Nath</span>
+    <i class="icon-gplus no_margin"></i>Google+<span class="hide">Google+ | Dev Nath</span>
   </a> | 
   <a target="_blank" class="social_footer" href="https://www.instagram.com/dev.nath">
-    <i class="icon-instagram"> Instagram</i><span class="hide">Instagram | Dev Nath</span>
+    <i class="icon-instagram no_margin"></i>Instagram<span class="hide">Instagram | Dev Nath</span>
   </a>
   </div> 
   </div>
